Mafalda did some updates

--- a/thesis-by-mafaldas/index.html
+++ b/thesis-by-mafaldas/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="images/logo.png" alt="logo">| ABC</h1>
+        <h1><img src="images/logo.png" alt="Logo for the ABC application">| ABC</h1>
         <nav id="desktopNavbar">
             <button class="nav-button">Hem</button>
             <button class="nav-button">Nyheter</button>
@@ -17,28 +17,28 @@
     </header>
     <main>
         <section id="section1">
-            <h2>Min sida</h2>
-            <h3>Eget utrymme</h3>
+            <h1>Min sida</h1>
+            <h2>Eget utrymme</h2>
             <div class="container">
                 <div class="icon-wrapper">
                     <img class="icon" src="images/folder-icon.png" alt="Folder Icon">
                 </div>
-                <div class="text">Manus</div>
+                <p>Manus</p>
             </div>
             <div class="container">
                 <div class="icon-wrapper">
                     <img class="icon" src="images/folder-icon.png" alt="Folder Icon">
                 </div>
-                <div class="text">Anteckningar</div>
+                <p>Anteckningar</p>
             </div>     
         </section>
-        <section id="section1">
-            <h3>Redaktioner</h3>
+        <section id="section2">
+            <h2>Redaktioner</h2>
             <div class="container">
                 <div class="icon-wrapper">
                     <img class="icon" src="images/add-icon.png" alt="Add Icon">
                 </div>
-                <div class="text">Välj redaktion</div>
+                <p>Välj redaktion</p>
             </div>      
         </section>
         <button id="newButton">
